# libuzi

./: .gitignore  CMakeLists.txt  config.h.in
cmake/: CheckCLinkerFlag.cmake  ConfigOptions.cmake
include/: CMakeLists.txt
include/uzi/: collections.h  crt.h  endian.h  error.h  handle.h  interlocked.h  intrin.h  library.h  pack.h  platform.h  pool.h  spec.h  string.h  synch.h  sysinfo.h  thread.h  uzi.h  windows.h  winpr.h  winsock.h  wtypes.h  wtypes.h.in
include/winpr/: collections.h  crt.h  error.h  handle.h  spec.h  synch.h  sysinfo.h  winsock.h  wtypes.h.in
libuzi/: CMakeLists.txt  cpu-features.c  critical.c  dictionary.c  event.c  file.c  handle.c  handle.h  init.c  interlocked.c  mutex.c  semaphore.c  string.c  synch.h  thread.c  thread.h  timer.c  tls.c  unicode.c  wait.c
libuzi/api/: CMakeLists.txt  uzi.c
libuzi/api/test/: .gitignore  CMakeLists.txt  TestEventApi.c
libuzi/core/: CMakeLists.txt  memory.c  string.c
libuzi/core/test/: .gitignore  CMakeLists.txt  TestAlignment.c  TestUnicode.c
libuzi/crt/: CMakeLists.txt  alignment.c  buffer.c  conversion.c  memory.c  string.c  unicode.c  utf.c  utf.h
libuzi/crt/test/: .gitignore  CMakeLists.txt  TestAlignment.c  TestUnicode.c
libuzi/error/: CMakeLists.txt  error.c
libuzi/file/: CMakeLists.txt
libuzi/handle/: CMakeLists.txt  handle.c  handle.h
libuzi/interlocked/: CMakeLists.txt  interlocked.c
libuzi/interlocked/test/: .gitignore  CMakeLists.txt  TestInterlockedAccess.c  TestInterlockedDList.c  TestInterlockedSList.c
libuzi/pool/: CMakeLists.txt  cleanup.c  pool.c  pool.h  work.c
libuzi/pool/test/: .gitignore  CMakeLists.txt  TestPoolThread.c  TestPoolWork.c
libuzi/synch/: CMakeLists.txt  barrier.c  condition.c  event.c  mutex.c  semaphore.c  sleep.c  synch.h  timer.c  wait.c
libuzi/synch/test/: .gitignore  CMakeLists.txt  TestSynchBarrier.c  TestSynchCritical.c  TestSynchEvent.c  TestSynchInit.c  TestSynchMutex.c  TestSynchSemaphore.c  TestSynchThread.c  TestSynchTimerQueue.c  TestSynchWaitableTimer.c  TestSynchWaitableTimerAPC.c
libuzi/sysinfo/: CMakeLists.txt  sysinfo.c
libuzi/sysinfo/test/: .gitignore  CMakeLists.txt  TestCpuFeatures.c
libuzi/test/: CMakeLists.txt  TestDictionary.c  TestInterlockedDList.c  TestSynchBarrier.c  TestSynchEvent.c  TestSynchMultipleThreads.c  TestSynchSemaphore.c  TestSynchWaitableTimerAPC.c  TestUzi.c
libuzi/thread/: CMakeLists.txt  thread.c  thread.h  tls.c
libuzi/utils/: ArrayList.c  CMakeLists.txt  CountdownEvent.c  LinkedList.c  Queue.c  Stack.c
libuzi/utils/test/: .gitignore  CMakeLists.txt  TestArrayList.c  TestLinkedList.c  TestListDictionary.c  TestQueue.c  TestWinPRUtils.c
libuzi/winsock/: CMakeLists.txt  winsock.c
libwinpr/crt/: alignment.c  string.c  unicode.c  utf.c
libwinpr/crt/test/: CMakeLists.txt  TestUnicode.c
libwinpr/error/: CMakeLists.txt  error.c
libwinpr/handle/: handle.c  handle.h  nonehandle.c
libwinpr/pool/: work.c
libwinpr/synch/: critical.c  event.c  init.c  mutex.c  semaphore.c  timer.c  wait.c
libwinpr/synch/test/: TestSynchTimerQueue.c
libwinpr/sysinfo/: sysinfo.c
libwinpr/sysinfo/test/: CMakeLists.txt
libwinpr/thread/: CMakeLists.txt  thread.c
libwinpr/utils/: CMakeLists.txt
libwinpr/utils/test/: CMakeLists.txt  TestArrayList.c  TestLinkedList.c  TestListDictionary.c  TestQueue.c
libwinpr/winsock/: winsock.c
